--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Waycon Sales",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.7.9",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
@@ -20,6 +21,8 @@
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.11.0",
     "node": "^22.6.0",
-    "nodemon": "^3.1.4"
+    "nodemon": "^3.1.4",
+    "qrcode-terminal": "^0.12.0",
+    "whatsapp-web.js": "^1.26.0"
   }
 }
